refactored test app